# onnc-umbrella

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  build.cmake.sh  build.sh  make_models_test.sh  test_onni_dump.py
.circleci/: config.yml
cmake/: External.cmake  FindSkyPat.cmake  Findllvm.cmake  Findonnx.cmake
docker/: Dockerfile  Dockerfile.base  Dockerfile.community  Dockerfile.community-vp  Dockerfile.dev  Dockerfile.dev.work  Dockerfile.external-prebuilt  Dockerfile.models  Dockerfile.nvdla-vp  Dockerfile.prebuilt  Dockerfile.prebuilt-external  README.md  build-models.sh  build-nvdla-loadables.sh  build.sh  common.sh  download-models.sh  get-result.sh  image-build-work.sh  image-build.sh  release-models.sh  release.sh
docker/in-container/: check-nvdla-runtime-output.sh  dump-predict-ranks.py  nvdla-runtime.expect  run-benchmark.sh  run-nvdla-quick-regression.sh  smake  ssync
docs/: build.md  docker.md
onnc/m4/: libonnc.m4
scripts/: clang-format-bm.sh  clang-format.sh  library.sh  regression.sh
scripts/release/: common.sh  template.sh
src/tools/calibration/: CMakeLists.txt  Calibration.cpp  Calibration.h  Kld.cpp  Kld.h  LayerImpl.h  ONNXOptimizer.cpp  ONNXOptimizer.h  ONNXShapeInference.cpp  ONNXShapeInference.h  common_calibration.proto  insertDummpyCtable.h  insertDummyCtable.cpp  insertDummyCtable.h  main.cpp  quantizeWeight.cpp  quantizeWeight.h
test/: CMakeLists.txt
test/regression/onnc_exist/: main.sh
test/regression/onni_exist/: main.sh
tools/onnx-as/: Makefile
tools/onnx-dis/: Makefile
trunk/: README
trunk/include/onnc/Diagnostic/: DiagCommonKinds.inc
